# periclaw

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  TODO.md  dev  justfile
.claude/skills/periclaw-send-it/: SKILL.md
.claude/skills/periclaw-send-it/agents/: openai.yaml
.github/workflows/: ci.yml
Scripts/: build.sh  ci.sh  config.sh  cross-arm64.sh  demo-smoke.sh  get-build-number.sh  lib.sh  run.sh  test.sh
assets/: icon.icns
assets/test/: scenario_happy.json
src/: app.rs  config.rs  device_identity.rs  logs.rs  main.rs  notifications.rs  palette.rs  secret_store.rs  transcript.rs  ui_state.rs
src/domain/: agent.rs  job.rs  mod.rs  room.rs  room_assignment.rs  status.rs
src/net/: commands.rs  demo.rs  events.rs  mock.rs  mod.rs  openclaw.rs  openclaw_ssh.rs  rpc.rs
src/scene/: flourish.rs  mod.rs  office.rs  room.rs  sprite.rs  thought_bubble.rs
src/ui/: agent_card.rs  agents_view.rs  approvals.rs  chat_bubble.rs  chat_input.rs  chat_view.rs  logs_view.rs  mod.rs  palette.rs  sessions_view.rs  settings_view.rs  sidebar.rs  sparkline.rs  status_bar.rs  theme.rs  widgets.rs
