[package]
name = "mission-control-desktop"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
description = "Pixel-art Agent Office desktop visualization of OpenClaw AI agents"

[[bin]]
name = "sassy-mc"
path = "src/main.rs"

[dependencies]
iced = { version = "0.14", features = ["canvas", "image", "tokio", "advanced"] }
palette = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["time", "sync", "rt-multi-thread", "macros", "process", "io-util"] }
tokio-tungstenite = { version = "0.29", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
keyring = "3"
directories = "6"
uuid = { version = "1", features = ["v4"] }
thiserror = "2"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
