[package]
name = "periclaw"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
description = "Pixel-art Agent Office desktop visualization of OpenClaw AI agents"

[[bin]]
name = "periclaw"
path = "src/main.rs"

[dependencies]
iced = { version = "0.14", features = ["canvas", "image", "tokio", "advanced"] }
palette = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["time", "sync", "rt-multi-thread", "macros", "process", "io-util"] }
tokio-tungstenite = { version = "0.29", features = ["rustls-tls-webpki-roots"] }
# Pinned to match tokio-tungstenite's rustls; `ring` is the crypto
# backend we install at startup (see main.rs).
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
# Device pairing (Ed25519 keypair + signed challenges).
ed25519-dalek = { version = "2", default-features = false, features = ["std", "rand_core"] }
rand = "0.8"
sha2 = "0.10"
base64 = "0.22"
hex = "0.4"
futures-util = "0.3"
# `keyring` v3 is a no-op mock without an explicit backend feature —
# pick the native OS keychain on each platform so device keys and the
# gateway token actually persist across launches.
keyring = { version = "3", features = ["apple-native", "linux-native-sync-persistent", "windows-native"] }
directories = "6"
uuid = { version = "1", features = ["v4"] }
thiserror = "2"
# Native OS notifications for approval requests, cron failures, and
# gateway update availability. `notify-rust` is a thin cross-platform
# shim — macOS talks to UserNotifications, Linux talks to zbus,
# Windows talks to WinRT. Default features pull `z` (zbus) which is
# what we want for the Linux wall-display path.
notify-rust = "4"
# PNG decode for the window/dock icon. `iced::window::icon::from_rgba`
# only accepts raw RGBA bytes, so we decode `logo.png` at startup.
image = { version = "0.25", default-features = false, features = ["png"] }

# Bundle metadata consumed by `cargo bundle` (installed separately
# via `cargo install cargo-bundle`). `./dev run` invokes cargo bundle
# on macOS so the running binary is a real `.app` — required for the
# dock icon, proper LaunchServices bundle identifier (no more
# "use_default" dialog), and Cmd-Tab label. Ship-time concerns like
# signing/notarization aren't set up yet; until then the bundle is
# usable for local launch but not distribution.
[package.metadata.bundle]
name = "PeriClaw"
identifier = "com.cpmadrid.periclaw"
icon = ["assets/icon.icns"]
category = "public.app-category.developer-tools"
short_description = "Pixel-art Agent Office desktop visualization of OpenClaw AI agents."
long_description = """
PeriClaw is a native Rust/Iced desktop client for an OpenClaw AI \
agent farm — pixel-art office scene with sprite animations, \
multi-agent chat, operator-driven cron runs and session resets, \
approval flow, persistent UI state across restarts.
"""

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
